Make sure scale text won't overflow

--- a/src/css/mapbox-gl.css
+++ b/src/css/mapbox-gl.css
@@ -536,6 +536,7 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
     padding: 0 5px;
     color: #333;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .mapboxgl-popup {
